fix: add correct validation for sub-components, avoid shadow vars for sub-components

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@economist/component-admin-bar",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "An admin bar",
   "homepage": "https://github.com/economist-components/component-admin-bar",
   "bugs": {
