--- a/package.json
+++ b/package.json
@@ -107,7 +107,11 @@
   "dependencies": {
     "@economist/component-bar-wrapper": "^2.0.0",
     "@economist/component-link-button": "^3.0.1",
-    "react": "^0.14.8"
+    "prop-types": "^15.0.0",
+    "react-dom": "^0.14.8||^15.0.0||^16.0.0"
+  },
+  "peerDependencies": {
+    "react": "^0.14.8||^15.0.0||^16.0.0"
   },
   "devDependencies": {
     "@economist/component-palette": "^1.5.0",
@@ -119,10 +123,11 @@
     "browserify": "^13.0.0",
     "browserify-istanbul": "^1.0.0",
     "chai": "^3.5.0",
-    "chai-enzyme": "^0.4.2",
+    "chai-enzyme": "^1.0.0-beta.0",
     "chai-spies": "^0.7.1",
-    "enzyme": "^2.2.0",
-    "eslint": "^2.4.0",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.1",
+    "eslint": "^2.9.0",
     "eslint-config-strict": "^8.5.0",
     "eslint-config-strict-react": "^8.0.1",
     "eslint-plugin-filenames": "^0.2.0",
@@ -149,9 +154,9 @@
     "postcss-import": "^8.0.2",
     "postcss-reporter": "^1.3.3",
     "postcss-url": "^5.1.1",
-    "react-addons-test-utils": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-i13n": "^2.0.12",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-i13n": "^2.7.1",
     "semantic-release": "^4.3.5",
     "stylelint": "^6.3.3",
     "stylelint-config-strict": "^4.0.0",
