--- a/package.json
+++ b/package.json
@@ -105,13 +105,13 @@
     ]
   },
   "dependencies": {
-    "@economist/component-bar-wrapper": "^2.0.0",
-    "@economist/component-link-button": "^3.0.1",
-    "prop-types": "^15.0.0",
-    "react-dom": "^0.14.8||^15.0.0||^16.0.0"
+    "@economist/component-bar-wrapper": "^2.2.0",
+    "@economist/component-link-button": "^3.1.0",
+    "prop-types": "^15.0.0"
   },
   "peerDependencies": {
-    "react": "^0.14.8||^15.0.0||^16.0.0"
+    "react": "^0.14.8||^15.0.0||^16.0.0",
+    "react-dom": "^0.14.8||^15.0.0||^16.0.0"
   },
   "devDependencies": {
     "@economist/component-palette": "^1.5.0",
@@ -155,7 +155,7 @@
     "postcss-reporter": "^1.3.3",
     "postcss-url": "^5.1.1",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react-dom": "^0.14.8||^15.0.0||^16.0.0",
     "react-i13n": "^2.7.1",
     "semantic-release": "^4.3.5",
     "stylelint": "^6.3.3",
