--- a/package.json
+++ b/package.json
@@ -155,7 +155,7 @@
     "postcss-reporter": "^1.3.3",
     "postcss-url": "^5.1.1",
     "react": "^16.0.0",
-    "react-dom": "^0.14.8||^15.0.0||^16.0.0",
+    "react-dom": "^16.0.0",
     "react-i13n": "^2.7.1",
     "semantic-release": "^4.3.5",
     "stylelint": "^6.3.3",
