--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@economist/component-admin-bar",
-  "version": "0.0.0-development",
+  "version": "3.0.2",
   "description": "An admin bar",
   "homepage": "https://github.com/economist-components/component-admin-bar",
   "bugs": {
